fixed: overflow on commentary box

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -19,6 +19,10 @@
     color: #173109;
 }
 
+.flowing-content-shim {
+    overflow: hidden;
+}
+
 /*Gauge*/
 
 
